# UltrasoundDesignGallery

./: .gitmodules  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  FindNLOPT.cmake  Sanitizers.cmake
paper/: .gitignore  abstract.tex  conclusion.tex  ieeecolor.cls  introduction.tex  krkmath.tex  master.tex  method.tex  references.bib  relatedworks.tex
paper/figures/: block_diagram_single.tex
paper/tmi/: background.tex  evaluation.tex  introduction.tex  krkmath.tex  master.bbl  master.tex  method.tex  references.bib  relatedworks.tex  tmi.sty
paper/tmi/figures/: block_diagram.tex
paper/tpami/: abstract.tex  background.tex  baselines.tex  biography.tex  bstcontrol.bib  cardiac1_figure.tex  cardiac3_figure.tex  conclusion.tex  evaluation.tex  introduction.tex  krkmath.tex  liver1_figure.tex  master.aux  master.bbl  master.tex  method.tex  references.bib  relatedworks.tex  tpami_master.bbl  tpami_master.tex
paper/tpami/figures/: block_diagram_single.tex  opt_simulation.vsz
scripts/: ced.jl  dpad.jl  eppr.jl  osrad.jl  posrad.jl  ts_onad.jl  utils.jl
scripts/SpeckleReduction/: Manifest.toml  Project.toml  README.md
scripts/SpeckleReduction/scripts/: bayesian_optimization.jl  evaluate_algorithms.jl  local_laplacian.jl  test.jl
scripts/SpeckleReduction/src/: SpeckleReduction.jl  admss.jl  apm.jl  ced.jl  clpd.jl  cshock.jl  dpad.jl  eed.jl  eppr.jl  fesr.jl  fllf.jl  gllf.jl  hdcs.jl  hybrid.jl  lpndsf.jl  mnml.jl  msamd.jl  musica.jl  ncd.jl  ncsf.jl  osrad.jl  pfdtv.jl  pnad.jl  posrad.jl  pyramids.jl  rpncd.jl  rshock.jl  shock.jl  susan_pm.jl  ts_onad.jl  utils.jl
src/: bayes_opt_test.cpp  bayesopt_benchmark.cpp  custom_image_processing.hpp  image_processing_api.cpp  image_processing_demo.cpp  main.cpp  metrics.hpp  prior_predictive.cpp  select_roi.cpp  ultrasound_design_gallery.cpp  usdg_simulation.cpp
src/bo/: acquisition.hpp  bayesian_optimization.hpp  bisection.hpp  cmaes.hpp  find_bounds.hpp  fit_gp.hpp  gp_inference.hpp  lbfgs.hpp  sample_hyper.hpp  spsa.hpp
src/gp/: data.hpp  gp_prior.hpp  kernel.hpp  likelihood.hpp  marginalized_gp.hpp  sample_beta.hpp
src/imaging/: cascaded_pyramid.cpp  cascaded_pyramid.hpp  coherent_diffusion.cu  coherent_diffusion.hpp  complex_diffusion.cu  complex_diffusion.hpp  complex_shock.cu  complex_shock.hpp  cuda_utils.hpp  diffusion.cu  diffusion.hpp  dpad.cu  dpad.hpp  dpad_shock.cu  dpad_shock.hpp  edge_enhance.cu  edge_enhance.hpp  gaussian_pyramid.cpp  gaussian_pyramid.hpp  ieed_guided.cu  ieed_guided.hpp  ieed_shock.cu  ieed_shock.hpp  laplacian_pyramid.cpp  laplacian_pyramid.cu  laplacian_pyramid.hpp  local_laplacian.cu  local_laplacian.hpp  local_laplacian_pyramid.cpp  local_laplacian_pyramid.cu  local_laplacian_pyramid.hpp  logcompression.hpp  lowpass.cpp  lowpass.hpp  lpndsf.cpp  lpndsf.hpp  ncd.cu  ncd.hpp  osrad.cu  osrad.hpp  (+14 more)
src/inference/: ess.hpp  imh.hpp  laplace.hpp  pm_ess.hpp  seed.hpp  spike_slab_mcmc.hpp
src/math/: blaze.hpp  cholesky.hpp  linearalgebra.hpp  lu.hpp  mvnormal.hpp  quadrature.hpp  root.hpp  uniform.hpp
src/misc/: blaze.hpp  cholesky.hpp  debug.hpp  linearalgebra.hpp  lu.hpp  mvnormal.hpp  prng.hpp  quadrature.hpp  seed.hpp  uniform.hpp
src/system/: debug.hpp  profile.hpp
src/ui/: line_search.cpp  line_search.hpp  natural_sort.hpp  optimization_manager.cpp  optimization_manager.hpp  parameter_value.cpp  parameter_value.hpp  spinner.hpp  status.cpp  status.hpp  ui.cpp  ui.hpp  user_interface.cpp  user_interface.hpp  utils.hpp  video_player.cpp  video_player.hpp
test/: CMakeLists.txt  bayesian_optimization.cpp  catch_main.cpp  cholesky.cpp  dataset.cpp  elliptical_slice.hpp  ess.cpp  finitediff.cpp  finitediff.hpp  gp.cpp  gp_ess.cpp  gp_inference.cpp  gp_prior.cpp  imh.cpp  inference.cpp  inverse.cpp  invquad.cpp  kernel.cpp  laplace_bernoulli.cpp  likelihood.cpp  logdet.cpp  misc.cpp  mvnormal.cpp  quadrature.cpp  root.cpp  sample_beta.cpp  spike_slab.cpp  spsa.cpp  statistical_test.cpp  statistical_test.hpp  utils.hpp
